--- a/src/temptest/SConscript
+++ b/src/temptest/SConscript
@@ -14,7 +14,7 @@ source_files = glob('*.cc') + glob('../base/*.cc') + glob('../rpc_proto/*.cc') +
 # for s in source_files:
 #     print('\t%s' % os.path.realpath(s))
 
-build_name = 'test_client'
+build_name = 'tmptest'
 env.Program(build_name, source_files)
 
 # print("==> 编译参数")
