--- a/src/server/SConscript
+++ b/src/server/SConscript
@@ -7,7 +7,7 @@ from glob import glob
 
 # print("Current working dir: %s" % os.path.abspath('.'))
 
-source_files = glob('../base/*.cc') + glob('./*.cc') + glob('../rpc_proto/*.cc') + glob('../rpc_def/*.cc')
+source_files = glob('../base/*.cc') + glob('./*.cc') + glob('../rpc_proto/*.cc') + glob('../rpc_def/*.cc') + glob('../rpclib/*.cc')
 
 build_name = 'test_server'
 env.Program(build_name, source_files)
