--- a/src/client/SConscript
+++ b/src/client/SConscript
@@ -3,7 +3,7 @@
 
 Import('env')
 
-import os
+import os, sys
 from glob import glob
 
 # print("Current working dir: %s" % os.path.abspath('.'))
@@ -14,7 +14,7 @@ source_files = glob('*.cc') + glob('../base/*.cc') + glob('../rpc_proto/*.cc') +
 # for s in source_files:
 #     print('\t%s' % os.path.realpath(s))
 
-build_name = 'test_client'
+build_name = 'test_client_%s' % sys.platform
 env.Program(build_name, source_files)
 
 # print("==> 编译参数")
